--- a/index.html
+++ b/index.html
@@ -9,15 +9,37 @@
 	<body>
 		<nav>
 			<div class="container">
-				<label class="brand">C12 Lab</label>
-				<ul class="navbar">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="products.html">Products</a></li>
-					<li><a href="services.html">Services</a></li>
-					<li><a href="about.html">About C12</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+				<label id="brand">C12 Lab</label>
+				<ul id="navbar">
+					<li class="active"><a href="./index.html">Home</a></li>
+					<li><a href="./products.html">Products</a></li>
+					<li><a href="./services.html">Services</a></li>
+					<li><a href="./about.html">About C12</a></li>
+					<li><a href="./contact.html">Contact Us</a></li>
 				</ul>
 			</div>
 		</nav>
+
+		<div class="masthead">
+			<div class="banner container">
+				<h1>WE DO WEB RIGHT.</h1>
+				<p>Provide Great Web Site Design & Development Services.</p>
+				<ul class="sns">
+					<li><a href="http://twitter.com/"><img src="./img/sns1.png" alt="twitter" /></a></li>
+					<li><a href="http://www.facebook.com/"><img src="./img/sns2.png" alt="facebook" /></a></li>
+					<li><a href="https://plus.google.com/"><img src="./img/sns3.png" alt="googleplus" /></a></li>
+					<li><a href="#"><img src="./img/sns4.png" alt="rss" /></a></li>
+					<li><a href="./message.html" style="margin:0;"><img src="./img/sns5.png" alt="leave message" /></a></li>
+				</ul>
+			</div>
+		</div>
+
+		<div class="content">
+			<div class="container">
+				<h1>Need a web site?</h1>
+				<p class="subtitle">We can help you.</p>
+			</div>
+		</div>
+		
 	</body>
 </html>
