--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			</div>
 		</nav>
 
+		<a name="top"></a>
+
 		<div class="masthead">
 			<div class="banner container">
 				<h1>WE DO WEB RIGHT.</h1>
@@ -40,6 +42,15 @@
 				<p class="subtitle">We can help you.</p>
 			</div>
 		</div>
-		
+
+		<footer>
+			<div class="container">
+				<p class="backtop"><a href="#top">Back to top</a></p>
+				<p>Designed by <a href="https://github.com/zcfan">Alan@C12</a>.</p>
+				<p>Thanks to George, you are a good teacher.</p>
+				<p>Hosted on <a href="https://github.com/zcfan/htmlFinalProject">Github</a>, All advice welcomed, and feel free to copy.</p>
+			</div>
+		</footer>
+
 	</body>
 </html>
