Start to work on content block.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
 			<div class="container">
 				<h1>Need a web site?</h1>
 				<p class="subtitle">We can help you.</p>
+
+				<div class="row">
+					<div class="span4">
+						<img src="./img/design.png" alt="design" />
+						<h2>For person or Company?</h2>
+						<p>Don't worry about anything. We will guide you find out which kind of website is the best fit for you and make it done.</p>
+					</div>
+					<div class="span4">
+						<img src="./img/code.png" alt="code" />
+						<h2>Design, then code.</h2>
+						<p>Not only good looking, coding is also important for a great website. Search engines love these websites which made with good code.</p>
+					</div>
+					<div class="span4">
+						<img src="./img/host.png" alt="host" />
+						<h2>After-sales service.</h2>
+						<p>We also can provide web hosting service for you. You can choose our service or others freely. If you need more help, we are allways here.</p>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
@@ -47,7 +66,6 @@
 			<div class="container">
 				<p class="backtop"><a href="#top">Back to top</a></p>
 				<p>Designed by <a href="https://github.com/zcfan">Alan@C12</a>.</p>
-				<p>Thanks to George, you are a good teacher.</p>
 				<p>Hosted on <a href="https://github.com/zcfan/htmlFinalProject">Github</a>, All advice welcomed, and feel free to copy.</p>
 			</div>
 		</footer>
