index.html is done!

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 		<div class="masthead">
 			<div class="banner container">
-				<h1>WE DO WEB RIGHT.</h1>
+				<h1> WE DO WEB RIGHT.</h1>
 				<p>Provide Great Web Site Design & Development Services.</p>
 				<ul class="sns">
 					<li><a href="http://twitter.com/"><img src="./img/sns1.png" alt="twitter" /></a></li>
@@ -57,6 +57,11 @@
 						<h2>After-sales service.</h2>
 						<p>We also can provide web hosting service for you. You can choose our service or others freely. If you need more help, we are allways here.</p>
 					</div>
+				</div>
+
+				<div class="row">
+					<h1>Get your best website Now.</h1>
+					<p class="subtitle">Check the <a href="./services.html">service</a> page for price information.</p>
 				</div>
 
 			</div>
