Remove sublime project file, add new product page.

--- a/products.html
+++ b/products.html
@@ -12,8 +12,8 @@
 				<label id="brand">C12 Lab</label>
 				<ul id="navbar">
 					<li><a href="./index.html">Home</a></li>
-					<li><a href="./products.html">Products</a></li>
-					<li class="active"><a href="./services.html">Services</a></li>
+					<li class="active"><a href="./products.html">Products</a></li>
+					<li><a href="./services.html">Services</a></li>
 					<li><a href="./about.html">About C12</a></li>
 					<li><a href="./contact.html">Contact Us</a></li>
 				</ul>
@@ -25,33 +25,36 @@
 		<div class="masthead content">
 			<div class="container">
 				<header class="pagetitle">
-					<h1>Services.</h1>
+					<h1>Products.</h1>
 				</header>
 
-				<div class="row">
-					<div class="span3">
-						<img src="./img/design.png" alt="design" />
+				<div class="row products">
+					<div class="span6">
+						<img src="./img/product1.png" alt="product" />
 						<h2>Web design</h2>
 						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
 						<a href="#" class="buy">$10000000.00</a>
 					</div>
-					<div class="span3">
-						<img src="./img/code.png" alt="code" />
+					<div class="span6">
+						<img src="./img/code.png" alt="product" />
 						<h2>personal hosting</h2>
 						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
 						<a href="#" class="buy">$123.00</a>
 					</div>
-					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>company hosting</h2>
-						<p>This service is for company clients. You can host your website in a powerful server, everyone can visit it very fast at anytime. Cheer!</p>
-						<a href="#" class="buy">$321.00</a>
+				</div>
+
+				<div class="row">
+					<div class="span6">
+						<img src="./img/design.png" alt="product" />
+						<h2>Web design</h2>
+						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
+						<a href="#" class="buy">$10000000.00</a>
 					</div>
-					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>Support</h2>
-						<p>We are allway here. If you have more idea to put in your website, please tell us. It is more cheaper than make a new website.</p>
-						<a href="#" class="buy">$100.00</a>
+					<div class="span6">
+						<img src="./img/code.png" alt="product" />
+						<h2>personal hosting</h2>
+						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
+						<a href="#" class="buy">$123.00</a>
 					</div>
 				</div>
 
