Product.html done.

--- a/products.html
+++ b/products.html
@@ -22,45 +22,33 @@
 
 		<a name="top"></a>
 
-		<div class="masthead content">
+		<div class="masthead content products">
 			<div class="container">
 				<header class="pagetitle">
 					<h1>Products.</h1>
 				</header>
 
-				<div class="row products">
+				<div class="row">
 					<div class="span6">
-						<img src="./img/product1.png" alt="product" />
-						<h2>Web design</h2>
-						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
-						<a href="#" class="buy">$10000000.00</a>
+						<a href="http://soundready.fm/"><img src="./img/product1.png" alt="product" /></a>
 					</div>
 					<div class="span6">
-						<img src="./img/code.png" alt="product" />
-						<h2>personal hosting</h2>
-						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
-						<a href="#" class="buy">$123.00</a>
+						<a href="https://www.gathercontent.com/"><img src="./img/product2.png" alt="product" /></a>
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="span6">
-						<img src="./img/design.png" alt="product" />
-						<h2>Web design</h2>
-						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
-						<a href="#" class="buy">$10000000.00</a>
+						<a href="http://www.jshint.com/"><img src="./img/product3.png" alt="product" /></a>
 					</div>
 					<div class="span6">
-						<img src="./img/code.png" alt="product" />
-						<h2>personal hosting</h2>
-						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
-						<a href="#" class="buy">$123.00</a>
+						<a href="http://5by5.tv/"><img src="./img/product4.png" alt="product" /></a>
 					</div>
 				</div>
 
 				<div class="row">
-					<h1>Are you kidding me?!</h1>
-					<p class="subtitle">You really want buy that things?</p>
+					<h1>All these things are not our product.</h1>
+					<p class="subtitle">But we can do better, :-)</p>
 				</div>
 
 			</div>
