--- a/contact.html
+++ b/contact.html
@@ -25,33 +25,15 @@
 		<div class="masthead content">
 			<div class="container">
 				<header class="pagetitle">
-					<h1>Services.</h1>
+					<h1>Contact us.</h1>
 				</header>
 
 				<div class="row">
-					<div class="span3">
+					<div class="span12">
 						<img src="./img/design.png" alt="design" />
 						<h2>Web design</h2>
 						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
 						<a href="#" class="buy">$10000000.00</a>
-					</div>
-					<div class="span3">
-						<img src="./img/code.png" alt="code" />
-						<h2>personal hosting</h2>
-						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
-						<a href="#" class="buy">$12300.00</a>
-					</div>
-					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>company hosting</h2>
-						<p>This service is for company clients. You can host your website in a powerful server, everyone can visit it very fast at anytime. Cheer!</p>
-						<a href="#" class="buy">$32100.00</a>
-					</div>
-					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>Support</h2>
-						<p>We are allway here. If you have more idea to put in your website, please tell us. It is more cheaper than make a new website.</p>
-						<a href="#" class="buy">$10000.00</a>
 					</div>
 				</div>
 
