Add localStorage feature to services.html, you can click the buy buttons to book fakely services now.

--- a/services.html
+++ b/services.html
@@ -33,31 +33,35 @@
 						<img src="./img/design.png" alt="design" />
 						<h2>Web design</h2>
 						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
-						<a href="#" class="buy">$10000000.00</a>
+						<a class="buy" onclick="buy('design')">$10000000.00</a>
+						<label id="design" class="label_buy"></label>
 					</div>
 					<div class="span3">
 						<img src="./img/code.png" alt="code" />
 						<h2>personal hosting</h2>
 						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
-						<a href="#" class="buy">$12300.00</a>
+						<a class="buy" onclick="buy('phosting')">$12300.00</a>
+						<label id="phosting" class="label_buy"></label>
 					</div>
 					<div class="span3">
 						<img src="./img/host.png" alt="host" />
 						<h2>company hosting</h2>
 						<p>This service is for company clients. You can host your website in a powerful server, everyone can visit it very fast at anytime. Cheer!</p>
-						<a href="#" class="buy">$32100.00</a>
+						<a class="buy" onclick="buy('chosting')">$32100.00</a>
+						<label id="chosting" class="label_buy"></label>
 					</div>
 					<div class="span3">
 						<img src="./img/host.png" alt="host" />
 						<h2>Support</h2>
 						<p>We are allway here. If you have more idea to put in your website, please tell us. It is more cheaper than make a new website.</p>
-						<a href="#" class="buy">$10000.00</a>
+						<a class="buy" onclick="buy('support')">$10000.00</a>
+						<label id="support" class="label_buy"></label>
 					</div>
 				</div>
 
 				<div class="row">
 					<h1>Are you kidding me?!</h1>
-					<p class="subtitle">You really want to buy that things?!!!</p>
+					<p class="subtitle">You want to buy that things?! Really?!!</p>
 				</div>
 
 			</div>
@@ -71,5 +75,6 @@
 			</div>
 		</footer>
 
+		<script type="text/javascript" src="./js/services.js"></script>
 	</body>
 </html>
