--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 					<li class="active"><a href="./index.html">Home</a></li>
 					<li><a href="./products.html">Products</a></li>
 					<li><a href="./services.html">Services</a></li>
-					<li><a href="./about.html">About C12</a></li>
-					<li><a href="./contact.html">Contact Us</a></li>
+					<li onmouseover="show_sub()" onmouseout="hide_sub()">
+						<a href="./about.html">About C12.</a>
+						<a style="display: none;" id="nav-sub" href="./contact.html">Contact Us</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
 
 		<a name="top"></a>
 
-		<div class="masthead">
+		<header class="masthead">
 			<div class="banner container">
 				<h1> WE DO WEB RIGHT.</h1>
 				<p>Provide Great Web Site Design & Development Services.</p>
@@ -34,7 +36,7 @@
 					<li><a href="./message.html" style="margin:0;"><img src="./img/sns5.png" alt="leave message" /></a></li>
 				</ul>k
 			</div>
-		</div>
+		</header>
 
 		<div class="content">
 			<div class="container">
@@ -74,6 +76,8 @@
 				<p>Hosted on <a href="https://github.com/zcfan/htmlFinalProject">Github</a>, All advice welcomed, and feel free to copy.</p>
 			</div>
 		</footer>
+
+		<script type="text/javascript" src="./js/nav.js"></script>
 
 	</body>
 </html>
