--- a/services.html
+++ b/services.html
@@ -14,8 +14,10 @@
 					<li><a href="./index.html">Home</a></li>
 					<li><a href="./products.html">Products</a></li>
 					<li class="active"><a href="./services.html">Services</a></li>
-					<li><a href="./about.html">About C12</a></li>
-					<li><a href="./contact.html">Contact Us</a></li>
+					<li onmouseover="show_sub()" onmouseout="hide_sub()">
+						<a href="./about.html">About C12.</a>
+						<a style="display: none;" id="nav-sub" href="./contact.html">Contact Us</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
@@ -76,5 +78,7 @@
 		</footer>
 
 		<script type="text/javascript" src="./js/services.js"></script>
+		<script type="text/javascript" src="./js/nav.js"></script>
+
 	</body>
 </html>
