--- a/services.html
+++ b/services.html
@@ -32,32 +32,32 @@
 
 				<div class="row">
 					<div class="span3">
-						<img src="./img/design.png" alt="design" />
+						<img src="./img/service1.png" alt="design" />
 						<h2>Web design</h2>
 						<p>You can get your own website for only $10000000, what you nedd to do is just use your head hit the wall, and give your money to me.</p>
 						<a class="buy" onclick="buy('design')">$10000000.00</a>
 						<label id="design" class="label_buy"></label>
 					</div>
 					<div class="span3">
-						<img src="./img/code.png" alt="code" />
-						<h2>personal hosting</h2>
+						<img src="./img/service2.png" alt="code" />
+						<h2>Personal hosting</h2>
 						<p>This service is only fit to personal website. It has limited space and processer power. It is cheap, of course. Enjoy blogging.</p>
 						<a class="buy" onclick="buy('phosting')">$12300.00</a>
 						<label id="phosting" class="label_buy"></label>
 					</div>
 					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>company hosting</h2>
+						<img src="./img/service3.png" alt="host" />
+						<h2>Company hosting</h2>
 						<p>This service is for company clients. You can host your website in a powerful server, everyone can visit it very fast at anytime. Cheer!</p>
 						<a class="buy" onclick="buy('chosting')">$32100.00</a>
 						<label id="chosting" class="label_buy"></label>
 					</div>
 					<div class="span3">
-						<img src="./img/host.png" alt="host" />
-						<h2>Support</h2>
+						<img src="./img/service4.png" alt="host" />
+						<h2>After-sell</h2>
 						<p>We are allway here. If you have more idea to put in your website, please tell us. It is more cheaper than make a new website.</p>
-						<a class="buy" onclick="buy('support')">$10000.00</a>
-						<label id="support" class="label_buy"></label>
+						<a class="buy" onclick="buy('after')">$10000.00</a>
+						<label id="after" class="label_buy"></label>
 					</div>
 				</div>
 
