--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 						</video>
 
 						<p>If you want contact us. You can use <a href="./contact.html">this link</a> or send a email. </p>
-						<p>Of couse we can also have a real meeting. Here is our location:</p>
+						<p>Of couse we can also have a real meeting. Here is our location(and your location):</p>
 
 						<div id="mapholder"></div>
 					</div>
