--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<li><a href="http://www.facebook.com/"><img src="./img/sns2.png" alt="facebook" /></a></li>
 					<li><a href="https://plus.google.com/"><img src="./img/sns3.png" alt="googleplus" /></a></li>
 					<li><a href="#"><img src="./img/sns4.png" alt="rss" /></a></li>
-					<li><a href="./message.html" style="margin:0;"><img src="./img/sns5.png" alt="leave message" /></a></li>
+					<li><a href="./contact.html" style="margin:0;"><img src="./img/sns5.png" alt="leave message" /></a></li>
 				</ul>k
 			</div>
 		</header>
