fix grammar problem

--- a/services.html
+++ b/services.html
@@ -63,7 +63,7 @@
 
 				<div class="row">
 					<h1>Are you kidding me?!</h1>
-					<p class="subtitle">You want to buy that things?! Really?!!</p>
+					<p class="subtitle">You want to buy these things?! Really?!!</p>
 				</div>
 
 			</div>
